--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.72"
+csv = "1.3.0"
 indicatif = "0.17.6"
 reqwest = { version = "0.11.18", features = ["blocking"] }
 scraper = "0.17.1"
